syntax = "proto3";

package pudicitia.hr;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "pudicitia.common/grpc/types.proto";

option csharp_namespace = "Pudicitia.Enterprise.Gateway";

service Attendance {
  rpc PaginateLeaves (PaginateLeavesRequest) returns (PaginateLeavesResponse);
}

message PaginateLeavesRequest {
  pudicitia.common.PageRequired page = 1;
  google.protobuf.Timestamp started_on = 2;
  google.protobuf.Timestamp ended_on = 3;
  google.protobuf.Int32Value approval_status = 4;
}

message PaginateLeavesResponse {
  pudicitia.common.PageRequired page = 1;
  repeated Leave items = 2;

  message Leave {
    pudicitia.common.GuidRequired id = 1;
    int32 type = 2;
    google.protobuf.Timestamp started_on = 3;
    google.protobuf.Timestamp ended_on = 4;
    int32 approval_status = 5;
    pudicitia.common.GuidRequired employee_id = 6;
    string employee_name = 7;
  }
}
